# Anagram_modulo_two

./: CMakeLists.txt  Solution.hpp  anagrams.txt  handle_IO.cpp  handle_IO.hpp  process_strings.cpp  process_strings.hpp  readme.md  remaining_territories.txt  solution.cpp  test_IO.cpp  test_str_proc.cpp
